Fix layout bug in IE
IE doesn’t fully support calc() with nested values. Will work on first
load properly, but won’t recalculate on browser resize. This addressed
this issue, and simplifies the code. Win win. Thanks IE!

--- a/source/assets/stylesheets/_grid.scss
+++ b/source/assets/stylesheets/_grid.scss
@@ -221,9 +221,11 @@
 
 .grid-content {
   width: 100%;
-  padding: 0 calc( (100% - 800px) * .5 );
+  max-width: 800px;
   margin-top: $small-spacing * .5;
   margin-bottom: $base-spacing * 2;
+  margin-left: auto;
+  margin-right: auto;
   background-color: #fff;
   border-radius: $base-border-radius;
   .grid-reset {
@@ -233,7 +235,6 @@
     font-size: $base-font-size * 1.75;
     margin-left: $base-spacing;
     @include media($phone-screen) {
-      margin-left: 0;
       line-height: 0;
     }
     font-family: "Titillium Web";
